--- a/50projects50days/day4-hidden-search-widget/index.html
+++ b/50projects50days/day4-hidden-search-widget/index.html
@@ -25,7 +25,7 @@
     const btn = document.querySelector('#btn')
     const input = document.querySelector('#input')
     btn.addEventListener('click', () => {
-      input.classList.toggle('w-[200px]')
+      input.classList.toggle('w-48')
       input.focus()
       btn.classList.toggle('translate-x-48')
     })
